<resources>
    <string name="app_name">KVWL Wifi Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">Username</string>
    <string name="save_credentials">Save Credentials?</string>
    <string name="tick_content">Success icon</string>
    <string name="login_success">Successfully logged in</string>
    <string name="exit_msg">The app will close now ...</string>
    <string name="login_error">An error occured</string>
    <string name="redirect_msg">You will be redirected to the login in a few seconds ...</string>
    <string name="username_lbl">Username:</string>
    <string name="username_placeholder">{Username}</string>
    <string name="error_content">Error icon</string>
    <string name="loading_msg">Logging in ...</string>
    <string name="error_invalid_username">This username is invalid</string>
</resources>
