<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.SuccessActivity">

    <ImageView
        android:id="@+id/tick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:contentDescription="@string/tick_content"
        app:srcCompat="@drawable/ic_baseline_check_circle" />

    <TextView
        android:id="@+id/successMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/login_success"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/exitMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/exit_msg" />
</LinearLayout>